[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/event_card.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://dtc16cg0dah4y" path="res://font/QingNiaoHuaGuangJianMeiHei-2.ttf" id="2_font"]

[sub_resource type="Theme" id="Theme_event_card"]
default_font = ExtResource("2_font")

[node name="EventCard" type="PanelContainer"]
custom_minimum_size = Vector2(380, 220)
size_flags_horizontal = 3
theme = SubResource("Theme_event_card")
script = ExtResource("1_script")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TitleLabel" type="Label" parent="Content"]
layout_mode = 2
autowrap_mode = 3

[node name="DetailLabel" type="RichTextLabel" parent="Content"]
layout_mode = 2
bbcode_enabled = false
scroll_active = false
fit_content = true

[node name="OptionsHeader" type="Label" parent="Content"]
layout_mode = 2
text = "Options"

[node name="OptionsContainer" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6
